Fix #10863: vertical alignment of bugnote meta data cells
The vertical-align property is not inherited as per
http://www.w3.org/TR/CSS2/visudet.html#propdef-vertical-align

Therefore we must apply the vertical-align property to the <td> itself,
and not the parent <tr>.

--- a/css/default.css
+++ b/css/default.css
@@ -83,9 +83,8 @@ tr.print-category	{ color: #000000; font-weight: bold; }
 
 #buglist tr			{ text-align: center; }
 
-tr.bugnote				{ vertical-align: top; }
-td.bugnote-public		{ background-color: #c8c8e8; color: #000000; font-weight: bold; width: 25%; line-height: 1.4; }
-td.bugnote-private		{ background-color: #e8e8e8; color: #000000; font-weight: bold; width: 25%; line-height: 1.4; }
+td.bugnote-public		{ background-color: #c8c8e8; color: #000000; font-weight: bold; width: 25%; line-height: 1.4; vertical-align: top; }
+td.bugnote-private		{ background-color: #e8e8e8; color: #000000; font-weight: bold; width: 25%; line-height: 1.4; vertical-align: top; }
 td.bugnote-note-public	{ background-color: #e8e8e8; color: #000000; width: 75%; }
 td.bugnote-note-private	{ background-color: #e8e8e8; color: #000000; width: 75%; }
 
